<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pocetni"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    android:orientation="vertical"
    android:rotationX="0"
    android:rotationY="0">

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="16dp"
        android:text="RestoranX"
        android:textColor="#E56DEA"
        android:textSize="75sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logintext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="#23F64BFD"
        android:hint="Username"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#23F64BFD"
        android:hint="Password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg_design"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Don't have an account? Register here."
        android:textColor="@android:color/white"
        android:textStyle="italic" />

</RelativeLayout>
